# rag

./: agent.py  app.py  docker-compose.yml  pyproject.toml
ingestion/: Dockerfile  ingestion.py
